--- a/.github/workflows/bla.yaml
+++ b/.github/workflows/bla.yaml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Start LocalStack
-        uses: ./
+        uses: docker://.
         with:
           image-tag: 'latest'
           install-awslocal: 'true'
