--- a/.github/workflows/bla.yaml
+++ b/.github/workflows/bla.yaml
@@ -1,5 +1,5 @@
 name: LocalStack Test
-on: [ push, pull_request ]
+on: [ push ]
 
 jobs:
   localstack-action-test:
@@ -9,39 +9,15 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Start LocalStack
-        uses: ./
+        uses: LocalStack/setup-localstack@v0.1.3
         with:
           image-tag: 'latest'
           install-awslocal: 'true'
           configuration: DEBUG=1
           use-pro: 'false'
+
       - name: Run Tests against LocalStack
         run: |
           awslocal s3 mb s3://test
           awslocal s3 ls
-          echo "Test Execution complete!"
-
-  cloud-pods-test:
-    name: 'Test Cloud Pods Action'
-    runs-on: ubuntu-latest
-    steps:
-      - name: ⚡️ Checkout the repository
-        uses: actions/checkout@v3
-
-      - name: Start LocalStack
-        uses: ./
-        with:
-          image-tag: 'latest'
-          install-awslocal: 'true'
-          use-pro: 'false'
-
-      - name: Run AWS commands
-        run: |
-          awslocal s3 mb s3://test
-          awslocal sqs create-queue --queue-name test-queue
-
-      - name: Save the Cloud Pod 
-        uses: LocalStack/setup-localstack/cloud-pods@main
-        with:
-          name: cloud-pods-test
-          action: save
+          echo "Test Execution complete!" 
