--- a/.github/workflows/bla.yaml
+++ b/.github/workflows/bla.yaml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Start LocalStack
-        uses: LocalStack/setup-localstack@v3.1.0
+        uses: localstack/localstack 
         with:
           image-tag: 'latest'
           install-awslocal: 'true'
